--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <p>
                                 Recommendations:
                             </p>
-                            <ul class="recommendation-list">
-                                <li class="recommendation-item">Sigurður Vignir Sigurðsson (group leader) - P. 859 - 1149</li>
+                            <ul>
+                                <li>Sigurður Vignir Sigurðsson (group leader) - P. 859 - 1149</li>
                             </ul>
                         </div>
                     </div>
@@ -120,8 +120,8 @@
                             <p>
                                 Recommendations:
                             </p>
-                            <ul class="recommendation-list">
-                                <li class="recommendation-item">Stefán B. Ólafsson – P. 869 - 7012</li>
+                            <ul>
+                                <li>Stefán B. Ólafsson – P. 869 - 7012</li>
                             </ul>
                         </div>
                     </div>
@@ -327,11 +327,11 @@
 
                 <h5 class="list-description">Tools</h5>
                 <ul class="list-inline">
-                    <li>Vim</li>
-                    <li>Nano</li>
                     <li>Atom</li>
                     <li>Sublime Text</li>
                     <li>TeX</li>
+                    <li>Vim</li>
+                    <li>Nano</li>
                     <li>Git</li>
                 </ul>
 
