--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="img/favicon.ico" rel="shortcut icon">
+    <link href="img/favicon.ico" rel="shortcut icon" />
     <link href="img/touch.png" rel="apple-touch-icon-precomposed" />
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
