--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
 
                 <p class="normal">
-                    I like writing <a href="https://github.com/egilsster">code</a>, web development, music and weight lifting.
+                    I like writing <a href="https://github.com/egilsster">code</a>, web development, problem solving, music and weight lifting.
                 </p>
 
                 <p class="footer light">
@@ -333,6 +333,8 @@
                     <li>Vim</li>
                     <li>Nano</li>
                     <li>Git</li>
+                    <li>Gulp</li>
+                    <li>Grunt</li>
                 </ul>
 
                 <h5 class="list-description">Web</h5>
