fixed very long lines for line length standard.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             <span class="top-border"></span>
             <div class="about">
                 <p class="bold">
-                    Hæ, ég heiti <a href="https://www.facebook.com/egilsster">Egill</a> &mdash; I study computer science at <a href="http://www.ru.is/">Reykjavík University</a>.
+                    Hæ, ég heiti <a href="https://www.facebook.com/egilsster">Egill</a> &mdash; I study
+                    computer science at <a href="http://www.ru.is/">Reykjavík University</a>.
                 </p>
 
                 <p class="normal">
-                    I like writing <a href="https://github.com/egilsster">code</a>, web development, problem solving, music and weight lifting.
+                    I like writing <a href="https://github.com/egilsster">code</a>, web development,
+                    problem solving, music and weight lifting.
                 </p>
 
                 <p class="footer light">
@@ -87,8 +89,10 @@
                     </header>
                     <div class="content">
                         <p>
-                            Finished the Windows XP to Windows 7 transition for Icelandair in Keflavik (february 2012 - march 2012). Worked as a field service technician and was assisting Icelandair Group (and subsidiaries) employees with technical problems (april 2012 - august
-                            2013, summer 2014 and summer 2015).
+                            Finished the Windows XP to Windows 7 transition for Icelandair in Keflavik
+                            (february 2012 - march 2012). Worked as a field service technician and was
+                            assisting Icelandair Group (and subsidiaries) employees with technical problems
+                            (april 2012 - august 2013, summer 2014 and summer 2015).
                         </p>
 
                         <div class="recommendations">
@@ -156,12 +160,20 @@
                             <time>july 2015</time>
                         </span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="https://github.com/egilsster/MEANPanda">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/MEANPanda">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            Rewrite of the ASP.net project PandaBase which I made in a 3 week course at Reykjavik University. I wanted to write it using AngularJS and needed a side project for the summer. I chose the <a href="http://mean.io/#!/">MEAN.io</a>                            stack since it was easy to get started using that. Users can register for an account, which allows them to create subtitle requests, upload subtitles, download subtitles and more.
+                            Rewrite of the ASP.net project PandaBase which I made in a 3 week course at Reykjavik
+                            University. I wanted to write it using AngularJS and needed a side project for the summer.
+                            I chose the <a href="http://mean.io/#!/">MEAN.io</a> stack since it was easy to get
+                            started using that. Users can register for an account, which allows them to create
+                            subtitle requests, upload subtitles, download subtitles and more.
                         </p>
                     </div>
                 </article>
@@ -175,14 +187,25 @@
                             <time>june 2015</time>
                         </span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="http://invictus.spagli.io/">Live</a></li>
-                            <li class="link-item"><a href="https://github.com/egilsster/InvictusCompetition">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="http://invictus.spagli.io/">
+                                    Live
+                                </a>
+                            </li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/InvictusCompetition">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            Simple scraper that goes to <a href="http://www.crossfitinvictus.com/category/wod/competition/">here</a> and takes the workout HTML directly and displays it in a simple web application. Developed using Flask, API functions
-                            written in Flask aswell as this is that small of a project. A little JavaScript was used for the paging functionality.
+                            Simple scraper that goes to
+                            <a href="http://www.crossfitinvictus.com/category/wod/competition/">here</a>
+                            and takes the workout HTML directly and displays it in a simple web application. Developed
+                            using Flask, API functions written in Flask aswell as this is that small of a project.
+                            A little JavaScript was used for the paging functionality.
                         </p>
                     </div>
                 </article>
@@ -196,13 +219,25 @@
                             <time>may 2015</time>
                         </span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="http://mooshak.spagli.io/">Live</a></li>
-                            <li class="link-item"><a href="https://github.com/egilsster/Python/tree/master/Verkefni%205/Mini%20Mooshak">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="http://mooshak.spagli.io/">
+                                    Live
+                                </a>
+                            </li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/Python/tree/master/Verkefni%205/Mini%20Mooshak">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            A server written in Python 3.4 using the Flask microframework. It's a server that automatically grades solutions sent in by students. It's a project I made in a Python course. The real Mooshak is a system that Reykjavík University uses to grade solutions by students and gives feedback. The problem descriptions were taken from the real Mooshak and Kattis. See the projects GitHub page for more information.
+                            A server written in Python 3.4 using the Flask microframework. It's a server that
+                            automatically grades solutions sent in by students. It's a project I made in a
+                            Python course. The real Mooshak is a system that Reykjavík University uses to
+                            grade solutions by students and gives feedback. The problem descriptions were
+                            taken from the real Mooshak and Kattis. See the projects GitHub page for more information.
                         </p>
                     </div>
                 </article>
@@ -216,13 +251,24 @@
                             <time>march 2015</time>
                         </span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="http://flappy.spagli.io/">Live</a></li>
-                            <li class="link-item"><a href="https://github.com/egilsster/Flappyfugl">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="http://flappy.spagli.io/">
+                                    Live
+                                </a>
+                            </li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/Flappyfugl">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            A game written purely using HTML5, CSS3 and JS. A clone of the popular Flappybird game. All graphics are hardware accelerated so the game is very smooth. The bird and pipe images were found on Google, the rest I created. See the projects GitHub page to see the implementation. This was a project for Web Programming at RU.
+                            A game written purely using HTML5, CSS3 and JS. A clone of the popular Flappybird game.
+                            All graphics are hardware accelerated so the game is very smooth. The bird and pipe images
+                            were found on Google, the rest I created. See the projects GitHub page to see the
+                            implementation. This was a project for Web Programming at RU.
                         </p>
                     </div>
                 </article>
@@ -233,13 +279,23 @@
                         <h1>Evaluation App</h1>
                         <span class="description">Reykjavík University</span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="http://evaluation.spagli.io/">Live</a></li>
-                            <li class="link-item"><a href="https://github.com/egilsster/Angular-EvaluationApp">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="http://evaluation.spagli.io/">
+                                    Live
+                                </a>
+                            </li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/Angular-EvaluationApp">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
-                        <p>Single-Page App (SPA) in AngularJS. Allows admin/teacher to create question templates and fill them with questions (text, true/false, and multiple choice). This form then becomes available to the users/students and once the form
-                            has been filled out, it can be submitted anonymously and only viewable by the admin/teacher.</p>
+                        <p>Single-Page App (SPA) in AngularJS. Allows admin/teacher to create question templates and
+                            fill them with questions (text, true/false, and multiple choice). This form then becomes
+                            available to the users/students and once the form has been filled out, it can be submitted
+                            anonymously and only viewable by the admin/teacher.</p>
                     </div>
                 </article>
 
@@ -249,13 +305,24 @@
                         <h1>Chatserver</h1>
                         <span class="description">Reykjavík University</span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="http://chat.spagli.io/">Live</a></li>
-                            <li class="link-item"><a href="https://github.com/egilsster/Angular-Chatserver">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="http://chat.spagli.io/">
+                                    Live
+                                </a>
+                            </li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/Angular-Chatserver">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            Chat Application using AngularJS and Socket.IO along with a server written in Node.js. Users are able to create rooms other users can join an chat, user that created the room is automatically admin and can make other admins. Includes features such as kicking, banning and private messaging.</p>
+                            Chat Application using AngularJS and Socket.IO along with a server written in Node.js.
+                            Users are able to create rooms other users can join an chat, user that created the room
+                            is automatically admin and can make other admins. Includes features such as kicking,
+                            banning and private messaging.</p>
                     </div>
                 </article>
 
@@ -268,13 +335,24 @@
                             <time>january 2015</time>
                         </span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="http://canvas.spagli.io/">Live</a></li>
-                            <li class="link-item"><a href="https://github.com/egilsster/HTML5-CanvasApp">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="http://canvas.spagli.io/">
+                                    Live
+                                </a>
+                            </li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/HTML5-CanvasApp">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            An HTML5 Canvas application, written using the canvas HTML5 element. Object oriented programming was used for this project. Bootstrap was used for the overall look, plus a little bit extra for the fullscreen canvas. This project was for a Web Programming course spring semester 2015 at RU.
+                            An HTML5 Canvas application, written using the canvas HTML5 element. Object oriented
+                            programming was used for this project. Bootstrap was used for the overall look, plus
+                            a little bit extra for the fullscreen canvas. This project was for a Web Programming
+                            course spring semester 2015 at RU.
                         </p>
                     </div>
                 </article>
@@ -288,13 +366,20 @@
                             <time>april 2015</time>
                         </span>
                         <ul class="link-list">
-                            <li class="link-item"><a href="https://github.com/egilsster/Panda2014">GitHub</a></li>
+                            <li class="link-item">
+                                <a href="https://github.com/egilsster/Panda2014">
+                                    GitHub
+                                </a>
+                            </li>
                         </ul>
                     </header>
                     <div class="content">
                         <p>
-                            A project from three week course at Reykjavik University. A web system where users could upload and download subtitles (in the srt format) for movies and TV shows. On the website, every user could download subtitles but only registered users could modify
-                            and upload subtitles. The system was written in Visual Studio using MVC. Websites were written in HTML5 and the form to change subtitles was done with JavaScript and jQuery.
+                            A project from three week course at Reykjavik University. A web system where users could
+                            upload and download subtitles (in the srt format) for movies and TV shows. On the website,
+                            every user could download subtitles but only registered users could modify and upload
+                            subtitles. The system was written in Visual Studio using MVC. Websites were written in
+                            HTML5 and the form to change subtitles was done with JavaScript and jQuery.
                         </p>
                     </div>
                 </article>
