added dale carnegie.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
 
                 <p class="normal">
-                    I like writing <a href="https://github.com/egilsster">code</a>, web development,
+                    I like writing <a href="https://github.com/egilsster">code</a>, app and web development,
                     problem solving, music and weight lifting.
                 </p>
 
@@ -56,6 +56,19 @@
                     </header>
                     <div class="content">
                         <p>B.Sc. Computer Science</p>
+                    </div>
+                </article>
+
+                <article class="cv-item">
+                    <header>
+                        <img src="img/dale.png" />
+                        <h1>Dale Carnegie</h1>
+                        <span class="duration">
+                            <time>september 2015 - november 2015</time>
+                        </span>
+                    </header>
+                    <div class="content">
+                        <p>Certificate of Achievement. Dale Carnegie Class - Next generation # 16.15.</p>
                     </div>
                 </article>
 
