added docker in tools.

--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
                     <li>Git</li>
                     <li>Gulp</li>
                     <li>Grunt</li>
+                    <li>Docker</li>
                 </ul>
 
                 <h5 class="list-description">Web</h5>
