--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </p>
 
                 <p class="normal">
-                    I like writing <a href="https://github.com/egilsster">code</a>, app and web development,
-                    problem solving, music and weight lifting.
+                    I love meeting new people, learning and expirencing new things,
+                    <a href="https://github.com/egilsster">programming</a> and weight lifting.
                 </p>
 
                 <p class="footer light">
