--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
 
             <p class="normal">
-                I love meeting new people, learning and expirencing new things,
+                I love meeting new people, learning and experiencing new things,
                 <a href="https://github.com/egilsster">programming</a> and weight lifting.
             </p>
 
