Fraunhofer exp entry

--- a/index.html
+++ b/index.html
@@ -96,6 +96,24 @@
 
 			<article class="cv-item">
 				<header>
+					<img src="img/fraunhofer.png"/>
+
+					<h1>Fraunhofer USA</h1>
+					<span class="description">Intern</span>
+						<span class="duration">
+							<time>january 2016 - july 2016</time>
+						</span>
+				</header>
+				<div class="content">
+					<p>
+						Intern at Fraunhofer USA Center for Experimental Software Engineering doing all
+						kinds of software projects.
+					</p>
+				</div>
+			</article>
+
+			<article class="cv-item">
+				<header>
 					<img src="img/nyherji.png"/>
 
 					<h1>Nýherji</h1>
@@ -159,7 +177,7 @@
 					<h1>Daníel Brandur Sigurgeirsson</h1>
 				</header>
 				<div class="content">
-					<p>Teacher at Reykjavík University</p>
+					<p>Adjunct at Reykjavík University</p>
 
 					<ul class="recommendations">
 						<li>
