--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<div class="content">
 					<p>
 						Intern at Fraunhofer USA Center for Experimental Software Engineering doing all
-						kinds of software engineering projects.
+						kinds of software projects.
 					</p>
 				</div>
 			</article>
