gulp tasks (autoreload, minify and more)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href="img/touch.png" rel="apple-touch-icon-precomposed"/>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style.min.css"/>
 </head>
 
 <body>
@@ -240,8 +240,8 @@
 						<span class="duration">
 							<time>july 2015</time>
 						</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="https://github.com/egilsster/MEANPanda">
 								GitHub
 							</a>
@@ -268,8 +268,8 @@
 						<span class="duration">
 							<time>june 2015</time>
 						</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="https://github.com/egilsster/InvictusCompetition">
 								GitHub
 							</a>
@@ -296,13 +296,13 @@
 						<span class="duration">
 							<time>may 2015</time>
 						</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="http://mooshak.spagli.io/">
 								Live
 							</a>
 						</li>
-						<li class="link-item">
+						<li>
 							<a href="https://github.com/egilsster/Python/tree/master/Verkefni%205/Mini%20Mooshak">
 								GitHub
 							</a>
@@ -329,8 +329,8 @@
 						<span class="duration">
 							<time>march 2015</time>
 						</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="http://flappy.spagli.io/">
 								Live
 							</a>
@@ -353,7 +353,7 @@
 
 					<h1>Evaluation App</h1>
 					<span class="description">Reykjavík University</span>
-					<ul class="link-list">
+					<ul class="inline-list">
 					</ul>
 				</header>
 				<div class="content">
@@ -370,8 +370,8 @@
 
 					<h1>Chatserver</h1>
 					<span class="description">Reykjavík University</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="http://chat.spagli.io/">
 								Live
 							</a>
@@ -396,8 +396,8 @@
 						<span class="duration">
 							<time>january 2015</time>
 						</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="http://canvas.spagli.io/">
 								Live
 							</a>
@@ -423,8 +423,8 @@
 						<span class="duration">
 							<time>april 2015</time>
 						</span>
-					<ul class="link-list">
-						<li class="link-item">
+					<ul class="inline-list">
+						<li>
 							<a href="https://github.com/egilsster/Panda2014">
 								GitHub
 							</a>
@@ -446,13 +446,13 @@
 		<div class="cv-group">
 			<h2>Skills</h2>
 			<h5 class="list-description">Databases</h5>
-			<ul class="list-inline">
+			<ul class="inline-list">
 				<li>MySQL</li>
 				<li>MongoDB</li>
 			</ul>
 
 			<h5 class="list-description">Methods</h5>
-			<ul class="list-inline">
+			<ul class="inline-list">
 				<li>Lean</li>
 				<li>Agile</li>
 				<li>Scrum</li>
@@ -460,7 +460,7 @@
 			</ul>
 
 			<h5 class="list-description">Programming</h5>
-			<ul class="list-inline">
+			<ul class="inline-list">
 				<li>C++</li>
 				<li>Python</li>
 				<li>JavaScript</li>
@@ -469,7 +469,7 @@
 			</ul>
 
 			<h5 class="list-description">Tools</h5>
-			<ul class="list-inline">
+			<ul class="inline-list">
 				<li>Atom</li>
 				<li>Sublime Text</li>
 				<li>TeX</li>
@@ -482,7 +482,7 @@
 			</ul>
 
 			<h5 class="list-description">Web</h5>
-			<ul class="list-inline">
+			<ul class="inline-list">
 				<li>HTML</li>
 				<li>CSS</li>
 				<li>jQuery</li>
