--- a/src/index.html
+++ b/src/index.html
@@ -183,6 +183,9 @@
 						<li>
 							Email: <a href="mailto:dabs@ru.is">dabs@ru.is</a>
 						</li>
+						<li>
+							Phone: 698 - 7128
+						</li>
 					</ul>
 				</div>
 			</article>
@@ -228,8 +231,61 @@
 			</article>
 		</div>
 
+		<!-- PROJECTS SECTION -->
 		<div class="cv-group">
 			<h2>Projects</h2>
+
+			<article class="cv-item">
+				<header>
+					<img src="../img/nodejs.png"/>
+
+					<h1>Centris</h1>
+					<span class="description">Reykjavik University</span>
+						<span class="duration">
+							<time>december 2015</time>
+						</span>
+				</header>
+				<div class="content">
+					<p>
+						Centris is a Learning Management System and Student Management System for Reykjavik University.
+					</p>
+					<p>
+						My contributions to the projects was writing an API where teachers and student can send
+						requests for certain things like changing a course. I also created the front end for this
+						particular function. The API was written in NodeJS and the front end was done with AngularJS.
+					</p>
+				</div>
+			</article>
+
+			<article class="cv-item">
+				<header>
+					<img src="../img/play.png"/>
+
+					<h1>RuFan Web</h1>
+					<span class="description">Reykjavik University</span>
+						<span class="duration">
+							<time>october 2015</time>
+						</span>
+					<ul class="inline-list">
+						<li>
+							<a href="https://github.com/Kallehz/RuFanWeb">
+								GitHub
+							</a>
+						</li>
+					</ul>
+				</header>
+				<div class="content">
+					<p>
+						RuFan is a Daily Fantasy Sports website, where users select their favorite soccer team for one
+						round of a tournament. For example, over the weekend the English Premier League features
+						several matches. You select a team from all players, and after the tournament, each player in
+						your team will get points based on performance.
+					</p>
+					<p>
+						This application was created using Spring Framwork, Play2 and Java.
+					</p>
+				</div>
+			</article>
 
 			<article class="cv-item">
 				<header>
