--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="../img/favicon.ico" rel="shortcut icon"/>
-    <link href="../img/touch.png" rel="apple-touch-icon-precomposed"/>
+    <link href="img/favicon.ico" rel="shortcut icon"/>
+    <link href="img/touch.png" rel="apple-touch-icon-precomposed"/>
 
-    <link rel="stylesheet" href="../dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../dist/css/style.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/style.min.css"/>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/ru.png"/>
+                    <img src="img/ru.png"/>
 
                     <h1>Reykjavík University</h1>
                 <span class="duration">
@@ -62,7 +62,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/dale.png"/>
+                    <img src="img/dale.png"/>
 
                     <h1>Dale Carnegie</h1>
                    <span class="duration">
@@ -76,7 +76,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/fb.png"/>
+                    <img src="img/fb.png"/>
 
                     <h1>Community College of Breiðholt</h1>
                    <span class="duration">
@@ -96,7 +96,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/fraunhofer.png"/>
+                    <img src="img/fraunhofer.png"/>
 
                     <h1>Fraunhofer USA</h1>
                     <span class="description">Intern</span>
@@ -114,7 +114,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/nyherji.png"/>
+                    <img src="img/nyherji.png"/>
 
                     <h1>Nýherji</h1>
                     <span class="description">Field Service Technician</span>
@@ -138,7 +138,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/ru.png"/>
+                    <img src="img/ru.png"/>
 
                     <h1>Daníel Brandur Sigurgeirsson</h1>
                 </header>
@@ -158,7 +158,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/nyherji.png"/>
+                    <img src="img/nyherji.png"/>
 
 
                     <h1>Sigurður Vignir Sigurðsson</h1>
@@ -183,7 +183,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/nodejs.png"/>
+                    <img src="img/nodejs.png"/>
 
                     <h1>Centris</h1>
                     <span class="description">Reykjavik University</span>
@@ -205,7 +205,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/play.png"/>
+                    <img src="img/play.png"/>
 
                     <h1>RuFan Web</h1>
                     <span class="description">Reykjavik University</span>
@@ -235,7 +235,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/meanio.png"/>
+                    <img src="img/meanio.png"/>
 
                     <h1>MEANPanda</h1>
                     <span class="description">Freelance</span>
@@ -263,7 +263,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/flask.png"/>
+                    <img src="img/flask.png"/>
 
                     <h1>Invictus Competition</h1>
                     <span class="description">Freelance</span>
@@ -291,7 +291,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/flask.png"/>
+                    <img src="img/flask.png"/>
 
                     <h1>Mini Mooshak</h1>
                     <span class="description">Reykjavík University</span>
@@ -324,7 +324,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/javascript.png"/>
+                    <img src="img/javascript.png"/>
 
                     <h1>FlappyBird</h1>
                     <span class="description">Reykjavík University</span>
@@ -351,7 +351,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/angular.png"/>
+                    <img src="img/angular.png"/>
 
                     <h1>Evaluation App</h1>
                     <span class="description">Reykjavík University</span>
@@ -368,7 +368,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/angular.png"/>
+                    <img src="img/angular.png"/>
 
                     <h1>Chatserver</h1>
                     <span class="description">Reykjavík University</span>
@@ -391,7 +391,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/html5.png"/>
+                    <img src="img/html5.png"/>
 
                     <h1>Whiteboard</h1>
                     <span class="description">Reykjavík University</span>
@@ -418,7 +418,7 @@
 
             <article class="cv-item">
                 <header>
-                    <img src="../img/asp.png"/>
+                    <img src="img/asp.png"/>
 
                     <h1>PandaBase</h1>
                     <span class="description">Reykjavík University</span>
