--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,23 @@
 
             <article class="cv-item">
                 <header>
+                    <img src="img/qlik.png"/>
+
+                    <h1>Qlik</h1>
+                    <span class="description">Junior Software Engineer</span>
+                  <span class="duration">
+                        <time>august 2016 - </time>
+                    </span>
+                </header>
+                <div class="content">
+                    <p>
+                        TBD
+                    </p>
+                </div>
+            </article>
+
+            <article class="cv-item">
+                <header>
                     <img src="img/fraunhofer.png"/>
 
                     <h1>Fraunhofer USA</h1>
