--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link href="img/favicon.ico" rel="shortcut icon" />
     <link href="img/touch.png" rel="apple-touch-icon-precomposed" />
+
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
 
   <body></body>
